# pcloud-mcp-server

./: .dockerignore  Dockerfile  LICENSE  README.md  catalog.yaml  main.py  pcloud.py  pyproject.toml
src/pcloud_mcp/: __init__.py  __main__.py  auth.py  download_manager.py  models.py  server.py  upload_manager.py
