[project]
name = "pcloud-mcp"
version = "0.1.0"
description = "An MCP (Model Context Protocol) server that provides tools for interacting with the pCloud API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.1",
]

[project.scripts]
pcloud-mcp = "pcloud_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcloud_mcp"]
